--- a/src/App.css
+++ b/src/App.css
@@ -29,10 +29,6 @@
   border-radius: 4px;
   background-color: #ffffff;
   transform: translate(-50%, -50%);
-  @media all and(max-width: 900px){
-    display: flex;
-    flex-direction: column;
-  }
 }
 
 .product_list {
@@ -50,7 +46,7 @@ h1 {
 
 .section_title {
   padding-bottom: 16px;
-  border-bottom: 2px solid rgba(33, 34, 64, 0.16);
+  border-bottom: 1px solid rgba(33, 34, 64, 0.16);
 }
 
 .subtitle {
@@ -74,3 +70,86 @@ h1 {
   flex-flow: row nowrap;
   justify-content: space-between;
 }
+
+.product-details-column {
+  width: 45%;
+  display: flex;
+  align-items: center;
+}
+
+.quantity-column {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.price-column {
+  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.total-column {
+  width: 15%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media all and (max-width: 900px) {
+  .middle_container {
+    display: flex;
+    flex-direction: column;
+  }
+  .quantity-column {
+    display:none
+   }
+   .price-column {
+     display: none;
+   }
+   .total-column {
+     display: none;
+   }
+  }
+
+  .item_product {
+    width: 100%;
+    list-style: none;
+    position: absolute;
+    left: 30px;
+    border: 3px solid #73AD21;
+  }
+
+  .product_image {
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .product_text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+h3 {
+  position: relative;
+  letter-spacing: -0.18px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+a {
+  letter-spacing: -0.18px;
+  font-size: 18px;
+  line-height: 24px;
+  color: #a6a7b3;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: 10px;
+  line-height: 16px;
+}
+  
